syntax = "proto3";
import "google/protobuf/timestamp.proto";

package com.product.stubs.product;

option java_package = "com.product.stubs.product";
option java_multiple_files =true;

service ProductService {
  rpc getProductById(ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  int32 product_id = 1;
}

message ProductResponse {
  int32 product_id = 1;
  string name = 2;
  int32 quantity = 3;
  google.protobuf.Timestamp expiry = 4;
  double price = 5;
}